force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/AI_Bulk_Processing_Metrics__c.object-meta.xml
<CustomObject>
    <label>AI Bulk Processing Metrics</label>
    <pluralLabel>AI Bulk Processing Metrics</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>AI Bulk Processing Metric</label>
        <displayFormat>ABPM-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>