force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/fields/Average_Time_Per_Request__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_Per_Request__c</fullName>
    <label>Average_Time_Per_Request_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>