force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <label>Batch_Id_</label>
    <type>Text</type>
    <length>100</length>
</CustomField>