force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/fields/Processing_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_Ms__c</fullName>
    <label>Processing_Time_Ms_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>