force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/fields/Rate_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Exceeded__c</fullName>
    <label>Rate_Limit_Exceeded_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>