force-app/main/default/objects/AI_Bulk_Processing_Metrics__c/fields/Total_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_Requests__c</fullName>
    <label>Total_Requests_</label>
    <type>Number</type>
    <precision>18</precision>\n    <scale>0</scale>
</CustomField>